--- a/tables/05_Hybrid_luC+epD_power.tex
+++ b/tables/05_Hybrid_luC+epD_power.tex
@@ -2,7 +2,7 @@
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{Hybrid}, implementation: \textbf{OMP-CPP+OMP-CUDA},\\
-    benchmark: \textbf{lu.C+ep.D}, data displayed: \textbf{energy used}}\label{tbl:OMP-CPP_OMP-CUDA_Hybrid_luC_epD_energy}
+    benchmark: \textbf{lu.C+ep.D}, data displayed: \textbf{power draw}}\label{tbl:OMP-CPP_OMP-CUDA_Hybrid_luC_epD_power}
     \setlength{\tabcolsep}{5mm}
     \begin{tblr}{
         vlines,
