--- a/tables/05_MPI_epD_energy.tex
+++ b/tables/05_MPI_epD_energy.tex
@@ -14,33 +14,33 @@
     \hline
         Results from 10 runs (GPU(s) + Processes)                   & 1 + 8  & 2 + 16 & 4 + 32 \\
     \hline
-        {Avg. Exec\@. time [s]}                                     &  &  &  \\
+        {Avg. Exec\@. time [s]}                                     & 131.454   & 80.068    & 73.33 \\
     \hline
-        {Std\@. dev\@. of time [-]}                                 &  &  &  \\
+        {Std\@. dev\@. of time [-]}                                 & 0.552     & 1.59      & 0.355 \\
     \hline
-        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 73.752    & 59.337    & 67.166 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.343     & 0.737     & 0.229 \\
     \hline
-        {(CPUs) \\ Avg\@. energy used [kJ]}                         &  &  &  \\
+        {(CPUs) \\ Avg\@. energy used [kJ]}                         & 13.081    & 10.813    & 11.935 \\
     \hline
-        {(CPUs) \\ Std\@. dev\@. of avg\@. energy used [-]}         &  &  &  \\
+        {(CPUs) \\ Std\@. dev\@. of avg\@. energy used [-]}         & 0.056     & 0.204     & 0.063 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 22.5      & 12.559    & 8.234 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.164     & 0.052     & 0.056 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 1.883     & 12.75     & 8.455 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.015     & 0.123     & 0.04 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 1.454     & 0.888     & 8.146 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.01      & 0.021     & 0.064 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 1.928     & 1.198     & 8.468 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.011     & 0.023     & 0.078 \\
     \hline
     \end{tblr}
 \end{table}
