--- a/tables/05_MPI_epD_power.tex
+++ b/tables/05_MPI_epD_power.tex
@@ -12,35 +12,35 @@
     \hline
         & \SetCell[c=3]{c} Hybrid  \\
     \hline
-        Results from 10 runs (GPU(s) + Processes)                   & 1 + 8  & 2 + 16 & 4 + 32 \\
+        Results from 10 runs (GPU(s) + Processes)               & 1 + 8     & 2 + 16    & 4 + 32 \\
     \hline
-        {Avg. Exec\@. time [s]}                                 &  &  &  \\
+        {Avg. Exec\@. time [s]}                                 & 131.454   & 80.068    & 73.33 \\
     \hline
-        {Std\@. dev\@. of time [-]}                             &  &  &  \\
+        {Std\@. dev\@. of time [-]}                             & 0.552     & 1.59      & 0.355 \\
     \hline
-        {(Yokogawa) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(Yokogawa) \\ Avg\@. power draw [W]}                   & 561.049   & 741.187   & 915.957 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 1.145     & 6.528     & 2.154 \\
     \hline
-        {(CPUs) \\ Avg\@. power draw [W]}                       &  &  &  \\
+        {(CPUs) \\ Avg\@. power draw [W]}                       & 99.713    & 135.506   & 163.343 \\
     \hline
-        {(CPUs) \\ Std\@. dev\@. of avg\@. power draw [-]}      &  &  &  \\
+        {(CPUs) \\ Std\@. dev\@. of avg\@. power draw [-]}      & 0.123     & 0.217     & 0.221 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(GPU\@: 0) \\ Avg\@. power draw [W]}                   & 171.163   & 156.899   & 112.283 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.676     & 2.686     & 0.845 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(GPU\@: 1) \\ Avg\@. power draw [W]}                   & 14.324    & 159.284   & 115.304 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.087     & 2.51      & 0.371 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(GPU\@: 2) \\ Avg\@. power draw [W]}                   & 11.058    & 11.096    & 111.088 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.052     & 0.068     & 0.945 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(GPU\@: 3) \\ Avg\@. power draw [W]}                   & 14.67     & 14.96     & 115.475 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.034     & 0.064     & 1.035 \\
     \hline
     \end{tblr}
 \end{table}
