--- a/tables/05_MPI_isD_energy.tex
+++ b/tables/05_MPI_isD_energy.tex
@@ -14,33 +14,33 @@
     \hline
         Results from 10 runs (GPU(s) + Processes)                   & 1 + 8  & 2 + 16 & 4 + 32 \\
     \hline
-        {Avg. Exec\@. time [s]}                                     &  &  &  \\
+        {Avg. Exec\@. time [s]}                                     & 82.853    & 47.997    & 35.723 \\
     \hline
-        {Std\@. dev\@. of time [-]}                                 &  &  &  \\
+        {Std\@. dev\@. of time [-]}                                 & 0.279     & 0.502     & 0.194 \\
     \hline
-        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 45.329    & 33.491    & 25.736 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.245     & 0.395     & 0.437 \\
     \hline
-        {(CPUs) \\ Avg\@. energy used [kJ]}                         &  &  &  \\
+        {(CPUs) \\ Avg\@. energy used [kJ]}                         & 7.768     & 5.891     & 5.241 \\
     \hline
-        {(CPUs) \\ Std\@. dev\@. of avg\@. energy used [-]}         &  &  &  \\
+        {(CPUs) \\ Std\@. dev\@. of avg\@. energy used [-]}         & 0.029     & 0.063     & 0.024 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 13.133    & 6.659     & 2.538 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.088     & 0.106     & 0.101 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 1.19      & 6.78      & 2.639 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.03      & 0.095     & 0.106 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 0.929     & 0.534     & 2.488 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.012     & 0.006     & 0.087 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 1.236     & 0.714     & 2.658 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.026     & 0.008     & 0.097 \\
     \hline
     \end{tblr}
 \end{table}
