--- a/tables/05_MPI_isD_power.tex
+++ b/tables/05_MPI_isD_power.tex
@@ -2,7 +2,7 @@
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{vinnana.kask}, device: \textbf{Hybrid}, implementation: \textbf{MPI-Fortran+Horovod-Python},\\
-    benchmark: \textbf{is.D.x+XCeption}, data displayed: \textbf{power draw}}\label{tbl:Hybrid_epDx_power}
+    benchmark: \textbf{is.D.x+XCeption}, data displayed: \textbf{power draw}}\label{tbl:Hybrid_isDx_power}
     \setlength{\tabcolsep}{5mm}
     \begin{tblr}{
         vlines,
@@ -12,35 +12,35 @@
     \hline
         & \SetCell[c=3]{c} Hybrid  \\
     \hline
-        Results from 10 runs (GPU(s) + Processes)                   & 1 + 8  & 2 + 16 & 4 + 32 \\
+        Results from 10 runs (GPU(s) + Processes)               & 1 + 8     & 2 + 16    & 4 + 32 \\
     \hline
-        {Avg. Exec\@. time [s]}                                 &  &  &  \\
+        {Avg. Exec\@. time [s]}                                 & 82.853    & 47.997    & 35.723 \\
     \hline
-        {Std\@. dev\@. of time [-]}                             &  &  &  \\
+        {Std\@. dev\@. of time [-]}                             & 0.279     & 0.502     & 0.194 \\
     \hline
-        {(Yokogawa) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(Yokogawa) \\ Avg\@. power draw [W]}                   & 547.1     & 697.771   & 720.439 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 1.914     & 3.633     & 11.668 \\
     \hline
-        {(CPUs) \\ Avg\@. power draw [W]}                       &  &  &  \\
+        {(CPUs) \\ Avg\@. power draw [W]}                       & 94.054    & 123.423   & 147.79 \\
     \hline
-        {(CPUs) \\ Std\@. dev\@. of avg\@. power draw [-]}      &  &  &  \\
+        {(CPUs) \\ Std\@. dev\@. of avg\@. power draw [-]}      & 0.133     & 0.22      & 0.322 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(GPU\@: 0) \\ Avg\@. power draw [W]}                   & 158.512   & 138.724   & 71.034 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.822     & 1.105     & 2.74 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(GPU\@: 1) \\ Avg\@. power draw [W]}                   & 14.358    & 141.267   & 73.891 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.356     & 1.547     & 2.972 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(GPU\@: 2) \\ Avg\@. power draw [W]}                   & 11.212    & 11.13     & 69.662 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.143     & 0.04      & 2.393 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(GPU\@: 3) \\ Avg\@. power draw [W]}                   & 14.924    & 14.884    & 74.406 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.311     & 0.047     & 2.716 \\
     \hline
     \end{tblr}
 \end{table}
