--- a/tables/05_MPI_luC_energy.tex
+++ b/tables/05_MPI_luC_energy.tex
@@ -14,33 +14,33 @@
     \hline
         Results from 10 runs (GPU(s) + Processes)                   & 1 + 8  & 2 + 16 & 4 + 32 \\
     \hline
-        {Avg. Exec\@. time [s]}                                     &  &  &  \\
+        {Avg. Exec\@. time [s]}                                     & 92.854    & 57.626    & 52.643 \\
     \hline
-        {Std\@. dev\@. of time [-]}                                 &  &  &  \\
+        {Std\@. dev\@. of time [-]}                                 & 0.297     & 0.266     & 0.329 \\
     \hline
-        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 52.199    & 42.166    & 44.773 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.244     & 0.342     & 0.692 \\
     \hline
-        {(CPUs) \\ Avg\@. energy used [kJ]}                         &  &  &  \\
+        {(CPUs) \\ Avg\@. energy used [kJ]}                         & 9.63      & 8.047     & 8.207 \\
     \hline
-        {(CPUs) \\ Std\@. dev\@. of avg\@. energy used [-]}         &  &  &  \\
+        {(CPUs) \\ Std\@. dev\@. of avg\@. energy used [-]}         & 0.032     & 0.037     & 0.062 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 15.014    & 8.284     & 5.114 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.102     & 0.084     & 0.14 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 1.334     & 8.472     & 5.267 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.007     & 0.12      & 0.15 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 1.031     & 0.637     & 5.077 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.011     & 0.006     & 0.143 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 1.373     & 0.863     & 5.332 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.011     & 0.005     & 0.155 \\
     \hline
     \end{tblr}
 \end{table}
