--- a/tables/05_MPI_luC_power.tex
+++ b/tables/05_MPI_luC_power.tex
@@ -12,35 +12,35 @@
     \hline
         & \SetCell[c=3]{c} Hybrid  \\
     \hline
-        Results from 10 runs (GPU(s) + Processes)                   & 1 + 8  & 2 + 16 & 4 + 32 \\
+        Results from 10 runs (GPU(s) + Processes)               & 1 + 8     & 2 + 16    & 4 + 32 \\
     \hline
-        {Avg. Exec\@. time [s]}                                 &  &  &  \\
+        {Avg. Exec\@. time [s]}                                 & 92.854    & 57.626    & 52.643 \\
     \hline
-        {Std\@. dev\@. of time [-]}                             &  &  &  \\
+        {Std\@. dev\@. of time [-]}                             & 0.297     & 0.266     & 0.329 \\
     \hline
-        {(Yokogawa) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(Yokogawa) \\ Avg\@. power draw [W]}                   & 562.155   & 731.711   & 850.486 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 2.046     & 3.034     & 10.848 \\
     \hline
-        {(CPUs) \\ Avg\@. power draw [W]}                       &  &  &  \\
+        {(CPUs) \\ Avg\@. power draw [W]}                       & 104.009   & 140.296   & 156.675 \\
     \hline
-        {(CPUs) \\ Std\@. dev\@. of avg\@. power draw [-]}      &  &  &  \\
+        {(CPUs) \\ Std\@. dev\@. of avg\@. power draw [-]}      & 0.097     & 0.152     & 0.243 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(GPU\@: 0) \\ Avg\@. power draw [W]}                   & 161.692   & 143.748   & 97.141 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.719     & 0.98      & 2.403 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(GPU\@: 1) \\ Avg\@. power draw [W]}                   & 14.369    & 147.024   & 100.048 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.081     & 1.612     & 2.599 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(GPU\@: 2) \\ Avg\@. power draw [W]}                   & 11.101    & 11.052    & 96.436 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.126     & 0.094     & 2.452 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(GPU\@: 3) \\ Avg\@. power draw [W]}                   & 14.789    & 14.979    & 101.289 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.114     & 0.06      & 2.684 \\
     \hline
     \end{tblr}
 \end{table}
