--- a/tables/05_XCeption_energy.tex
+++ b/tables/05_XCeption_energy.tex
@@ -14,33 +14,33 @@
     \hline
         Results from 10 runs                                        & 1 GPU     & 2 GPUs    & 4 GPUs \\
     \hline
-        {Avg. Exec\@. time [s]}                                     &  &  &  \\
+        {Avg. Exec\@. time [s]}                                     & 133.363   & 80.633    & 56.574 \\
     \hline
-        {Std\@. dev\@. of time [-]}                                 &  &  &  \\
+        {Std\@. dev\@. of time [-]}                                 & 0.403     & 0.36      & 0.35 \\
     \hline
-        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 68.234    & 53.697    & 51.213 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.268     & 0.18      & 0.268 \\
     \hline
-        {(CPUs) \\ Avg\@. energy used [kJ]}                         &  &  &  \\
+        {(CPUs) \\ Avg\@. energy used [kJ]}                         & 7.368     & 5.414     & 4.582 \\
     \hline
-        {(CPUs) \\ Std\@. dev\@. of avg\@. energy used [-]}         &  &  &  \\
+        {(CPUs) \\ Std\@. dev\@. of avg\@. energy used [-]}         & 0.023     & 0.028     & 0.028 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 22.614    & 12.638    & 7.659 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.178     & 0.036     & 0.044 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 1.923     & 12.846    & 7.836 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.018     & 0.092     & 0.037 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 1.475     & 0.884     & 7.572 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.007     & 0.01      & 0.07 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     &  &  &  \\
+        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 1.952     & 1.199     & 7.788 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     &  &  &  \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.006     & 0.008     & 0.079 \\
     \hline
     \end{tblr}
 \end{table}
