--- a/tables/05_XCeption_power.tex
+++ b/tables/05_XCeption_power.tex
@@ -14,33 +14,33 @@
     \hline
         Results from 10 runs                                    & 1 GPU     & 2 GPUs    & 4 GPUs \\
     \hline
-        {Avg. Exec\@. time [s]}                                 &  &  &  \\
+        {Avg. Exec\@. time [s]}                                 & 133.363   & 80.633    & 56.574 \\
     \hline
-        {Std\@. dev\@. of time [-]}                             &  &  &  \\
+        {Std\@. dev\@. of time [-]}                             & 0.403     & 0.36      & 0.35 \\
     \hline
-        {(Yokogawa) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(Yokogawa) \\ Avg\@. power draw [W]}                   & 511.645   & 665.957   & 905.241 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 1.12      & 2.813     & 2.909 \\
     \hline
-        {(CPUs) \\ Avg\@. power draw [W]}                       &  &  &  \\
+        {(CPUs) \\ Avg\@. power draw [W]}                       & 55.354    & 67.363    & 81.37 \\
     \hline
-        {(CPUs) \\ Std\@. dev\@. of avg\@. power draw [-]}      &  &  &  \\
+        {(CPUs) \\ Std\@. dev\@. of avg\@. power draw [-]}      & 0.074     & 0.203     & 0.283 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(GPU\@: 0) \\ Avg\@. power draw [W]}                   & 169.563   & 156.733   & 135.377 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.878     & 0.832     & 1.089 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(GPU\@: 1) \\ Avg\@. power draw [W]}                   & 14.416    & 159.318   & 138.517 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.097     & 1.436     & 1.123 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(GPU\@: 2) \\ Avg\@. power draw [W]}                   & 11.06     & 10.967    & 133.84 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.054     & 0.12      & 1.084 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. power draw [W]}                   &  &  &  \\
+        {(GPU\@: 3) \\ Avg\@. power draw [W]}                   & 14.637    & 14.873    & 137.662 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. power draw [-]}  &  &  &  \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.046     & 0.091     & 1.053 \\
     \hline
     \end{tblr}
 \end{table}
