--- a/main.tex
+++ b/main.tex
@@ -32,7 +32,7 @@
 \include{chapters/02_Theoretical_Background.tex}
 % \include{chapters/03_Related_Work.tex}
 \include{chapters/04_Preparations_to_Experiments.tex}
-\include{chapters/05_Experiments.tex}
+% \include{chapters/05_Experiments.tex}
 \include{chapters/06_Summary.tex}
 % \include{chapters/example.tex}
 
