--- a/tables/04_exet_times_of_Horovod_Python_kernels.tex
+++ b/tables/04_exet_times_of_Horovod_Python_kernels.tex
@@ -7,6 +7,9 @@
         vlines,%
         row{1}={font=\bfseries,bg=lightgray!30},%
         column{1,2}={halign=c},%
+        cell{2}{1-4}={bg=green!15},
+        cell{5}{1-4}={bg=green!15},
+        cell{8}{1-4}={bg=green!15},
     }%
         Number of GPUs used & Number of training epochs & Execution time [s] & Test accuracy [\%] \\
         1 & 1 & 124.2 & 88.99 \\
