--- a/tables/summary/mpi-gpu-xception.tex
+++ b/tables/summary/mpi-gpu-xception.tex
@@ -7,7 +7,7 @@
     \begin{tblr}{
         vlines,
         row{1}={font=\bfseries,halign=c,bg=lightgray!30},
-        row{2,5-6,9-10} = {bg = lightgray!30}
+        row{2} = {bg = lightgray!30}
         }
     \hline
         & \SetCell[c=2]{c} GPUs \\
