--- a/misc/abstract-en.tex
+++ b/misc/abstract-en.tex
@@ -11,9 +11,9 @@ solutions are evaluated, as well as their limitations for newest CPUs and GPUs.
 % Define 5-10 keywords which can describe what you're writing about
 \bigskip
 \noindent
-\textbf{Keywords:} Informatics, parallel programming,
-High-Performance Computing Systems, green computing, NAS Parallel Benchmark,
-Linux Perf, Intel RAPL, NVML, Internal Power Sensors, External Power Meters
+\textbf{Keywords:} Informatics, Parallel Programming,
+High-Performance Computing Systems, Green Computing, NAS Parallel Benchmark,
+Linux Perf, Intel RAPL, NVML, Internal Power Sensors, External Power Meters.
 
 % Choose the field from the OECD list:
 % https://en.wikipedia.org/wiki/Fields_of_Science_and_Technology
@@ -21,6 +21,9 @@ Linux Perf, Intel RAPL, NVML, Internal Power Sensors, External Power Meters
 \bigskip
 \noindent
 \textbf{Field of science and technology in accordance with OECD
-requirements:} [PLACEHOLDER] ask Dr. Czarnul
+requirements:}
+
+\noindent
+Electrical engineering, Electronic engineering, Information engineering
 
 % \end{otherlanguage}
